--- a/ChartsDemo/Pages/Index.razor
+++ b/ChartsDemo/Pages/Index.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Column chart:</h1>
 
-Welcome to your new app.
+<ColumnDiagram Data=@Data />
 
-<ColumnDiagram />
+<h1>Pie chart:</h1>
+
+<PieDiagram Data=@Data />
+
+@code {
+
+    public List<ChartData> Data { get; set; } = new List<ChartData>
+    {
+        new ChartData { Id="1", Label="1", Data=40, Color="blue"  },
+        new ChartData { Id="2", Label="2", Data=60, Color="red"  }
+    };
+}
