--- a/ChartsDemo/Pages/_Host.cshtml
+++ b/ChartsDemo/Pages/_Host.cshtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="ChartsDemo.styles.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/material.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
