--- a/ChartsDemo/Pages/_Host.cshtml
+++ b/ChartsDemo/Pages/_Host.cshtml
@@ -1,21 +1,23 @@
 ﻿@page "/"
 @namespace ChartsDemo.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@{
-    Layout = null;
-}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChartsDemo</title>
-    <base href="~/" />
+
+    <title>Charts Demo App</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
+
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
-    <link href="_content/Syncfusion.Blazor.Themes/material.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
+
+    <link href="_content/Syncfusion.Blazor/styles/material.css" rel="stylesheet" />
+
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body class="body-dark">
