--- a/ChartsDemo/Pages/_Host.cshtml
+++ b/ChartsDemo/Pages/_Host.cshtml
@@ -9,18 +9,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Charts Demo App</title>
+    <title>Demo App</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
 
-    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
-    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
-
-    <link href="_content/Syncfusion.Blazor/styles/material.css" rel="stylesheet" />
-
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="./material.css" rel="stylesheet" />
+    <link href="./site.css" rel="stylesheet" />
+    <link href="./app.css" rel="stylesheet" />
 </head>
-<body class="body-dark">
+<body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
     <script src="_framework/blazor.server.js"></script>
 </body>
