--- a/ChartsDemo/Pages/Index.razor
+++ b/ChartsDemo/Pages/Index.razor
@@ -4,8 +4,10 @@
 
 <StockDiagram Data=@Prices />
 
-<SfNumericTextBox @bind-Value=@Value Step="1" FloatLabelType=@FloatLabelType.Auto Placeholder="Label" CssClass="e-outline e-bigger form-input" TValue="decimal" />
-
+@if(false)
+{
+    <SfNumericTextBox @bind-Value=@Value Step="1" FloatLabelType=@FloatLabelType.Auto Placeholder="Label" CssClass="e-outline e-bigger form-input" TValue="decimal" />
+}
 
 @code
 {
