Server and client

--- a/ChartsDemo.Common/Diagrams/StockDiagram.razor
+++ b/ChartsDemo.Common/Diagrams/StockDiagram.razor
@@ -1,4 +1,4 @@
-﻿@namespace Common.Web
+﻿@namespace ChartsDemo.Common.Shared
 @using Syncfusion.Blazor.Charts
 
 <div style="height:450px; width:100%; padding: 20px;">
