--- a/ChartsDemo.Server/Pages/_Host.cshtml
+++ b/ChartsDemo.Server/Pages/_Host.cshtml
@@ -18,7 +18,7 @@
     <link href="./app.css" rel="stylesheet" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(ChartsDemo.Server.App)" render-mode="ServerPrerendered" />
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
