--- a/ChartsDemo.Server/_Imports.razor
+++ b/ChartsDemo.Server/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
-@using ChartsDemo.Common.Shared
+@using ChartsDemo.Server
+@using ChartsDemo.Common.Components
