--- a/ChartsDemo.Client/_Imports.razor
+++ b/ChartsDemo.Client/_Imports.razor
@@ -6,6 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-
 @using ChartsDemo.Client
-@using ChartsDemo.Common.Components
+@using ChartsDemo.Client.Shared
