--- a/Webpage/_Imports.razor
+++ b/Webpage/_Imports.razor
@@ -9,3 +9,6 @@
 @using Webpage.Components
 @using Webpage.Models
 @using Webpage.Services
+
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Charts
