--- a/Webpage/Components/StockChart.razor
+++ b/Webpage/Components/StockChart.razor
@@ -8,29 +8,29 @@
 
     @if (Data != null)
     {
-        <SfStockChart Theme=@ChartTheme.MaterialDark>
-            <StockChartEvents Loaded=@OnLoad />
-            <StockChartPrimaryXAxis IntervalType="IntervalType.Days" DesiredIntervals="16" LabelFormat="yyyy.MM.dd" EnableAutoIntervalOnZooming="false" />
-            <StockChartChartBorder Width="0" />
-            <StockChartAxes>
-                <StockChartAxis RowIndex=0 OpposedPosition="false" Name="VolumeAxis" Visible="false" Maximum=@Max>
-                </StockChartAxis>
-            </StockChartAxes>
-            <StockChartRows>
-                <StockChartRow Height="100%"></StockChartRow>
-                <StockChartRow Height="10%"></StockChartRow>
-            </StockChartRows>
-            <StockChartSeriesCollection>
-                <StockChartSeries DataSource=@Data Type=@ChartSeriesType.Candle XName="Date" YName="Close" High="High" Low="Low" Open="Open" Close="Close" />
-                <StockChartSeries DataSource=@Data Type="ChartSeriesType.Column" XName="Date" YName="Volume" YAxisName="VolumeAxis" Fill=@Colors.Warning  />
-            </StockChartSeriesCollection>
-            <StockChartPeriods>
-                <StockChartPeriod Text="Last week" IntervalType=RangeIntervalType.Weeks Interval="1" />
-                <StockChartPeriod Text="Last month" IntervalType=RangeIntervalType.Months Interval="1" />
-                <StockChartPeriod Text="Last year" IntervalType=RangeIntervalType.Years Interval="1" Selected="true" />
-                <StockChartPeriod Text="All"></StockChartPeriod>
-            </StockChartPeriods>
-        </SfStockChart>
+<SfStockChart Theme=@Theme.MaterialDark>
+    <StockChartEvents OnLoaded=@OnLoad />
+    <StockChartPrimaryXAxis IntervalType="IntervalType.Days" DesiredIntervals="16" LabelFormat="yyyy.MM.dd" EnableAutoIntervalOnZooming="false" />
+    <StockChartChartBorder Width="0" />
+    <StockChartAxes>
+        <StockChartAxis RowIndex=0 OpposedPosition="false" Name="VolumeAxis" Visible="false" Maximum=@Max>
+        </StockChartAxis>
+    </StockChartAxes>
+    <StockChartRows>
+        <StockChartRow Height="100%"></StockChartRow>
+        <StockChartRow Height="10%"></StockChartRow>
+    </StockChartRows>
+    <StockChartSeriesCollection>
+        <StockChartSeries DataSource=@Data Type=@ChartSeriesType.Candle XName="Date" YName="Close" High="High" Low="Low" Open="Open" Close="Close" />
+        <StockChartSeries DataSource=@Data Type="ChartSeriesType.Column" XName="Date" YName="Volume" YAxisName="VolumeAxis" Fill=@Colors.Warning />
+    </StockChartSeriesCollection>
+    <StockChartPeriods>
+        <StockChartPeriod Text="Last week" IntervalType=RangeIntervalType.Weeks Interval="1" />
+        <StockChartPeriod Text="Last month" IntervalType=RangeIntervalType.Months Interval="1" />
+        <StockChartPeriod Text="Last year" IntervalType=RangeIntervalType.Years Interval="1" Selected="true" />
+        <StockChartPeriod Text="All"></StockChartPeriod>
+    </StockChartPeriods>
+</SfStockChart>
     }
 </div>
 
@@ -41,9 +41,10 @@
 
     private bool Loaded { get; set; }
 
-    private void OnLoad()
+    protected void OnLoad(StockChartEventArgs args)
     {
         Loaded = true;
+        StateHasChanged();
     }
 
     private long Max { get { return Data.Max(s => s.Volume) * 5; } }
